--- a/html/informacion-personal.html
+++ b/html/informacion-personal.html
@@ -163,9 +163,20 @@
         <!-- End Header Bottom -->
     </header>
     <main>
-        <div class="container">
+        <div class="container container-information">
             <section class="user-personal-info my-5">
-                <h2 class="my-5">Tu Información Personal</h2>
+                <div class="title-dropdown">
+                    <h2 class="my-5">Tu Información Personal</h2>
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Configuracion
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><button onclick="editarPerfil()" class="dropdown-item" type="button">Editar perfil</button></li>
+                      <li><button onclick="logout()" class="dropdown-item" type="button">Log out</button></li>
+                    </ul>
+                  </div>
+                </div>
                 <table class="table caption-top">
                     <tbody>
                       <tr>
@@ -287,7 +298,10 @@
     <script src="/js/tiny-slider.js"></script>
     <script src="/js/glightbox.min.js"></script>
     <script src="/js/main.js"></script>
-    <script src="/js/validar-sesion.js"></script>
     <script src="/js/leer-usuario.js"></script>
+    <script src="/js/validar-sesion.js"></script>
+    <script src="/js/editar-perfil.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="/js/perfil-usuario.js"></script>
 </body>
 </html>
