funcionalidad de los pedidos implementada a medias

--- a/html/product-details.html
+++ b/html/product-details.html
@@ -219,7 +219,7 @@
                         <div class="product-info">
                             <h2 id="product-name" class="title"></h2>
                             <h2 id="stock" class="title"></h2>
-                            <h3 id="price" class="price"></h3>
+                            <h3 id="price" class="price text-danger"></h3>
                             <p id="description" class="info-text"></p>
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-12 mt-4">
