--- a/html/informacion-personal.html
+++ b/html/informacion-personal.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/tiny-slider.css" />
     <link rel="stylesheet" href="../css/glightbox.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/carrito.css" />
+    
 </head>
 <body>
     <header class="header navbar-area">
@@ -169,7 +171,7 @@
                     <h2 class="my-5">Tu Información Personal</h2>
                 <div class="dropdown">
                     <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Configuracion
+                      Opciones
                     </button>
                     <ul class="dropdown-menu">
                       <li><button onclick="editarPerfil()" class="dropdown-item" type="button">Editar perfil</button></li>
@@ -207,6 +209,12 @@
                     </tbody>
                   </table>
             </section>
+        </div>
+        <div class="container">
+            <div class="cart-container">
+                <div class="cart-wrapper">
+                </div>
+            </div>
         </div>
     </main>
     <footer class="footer">
@@ -302,6 +310,5 @@
     <script src="/js/validar-sesion.js"></script>
     <script src="/js/editar-perfil.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="/js/perfil-usuario.js"></script>
 </body>
 </html>
