--- a/html/pago.html
+++ b/html/pago.html
@@ -173,32 +173,28 @@
         <div class="payment-container">
             <div class="left-column">
                 <div class="col-12">
-                    <button class="btn btn-primary mb-5" type="submit">auto-completar</button>
+                    <button onclick="autoComplete()" class="btn btn-primary mb-5">auto-completar</button>
                   </div>
                 <form class="row g-3">
                     <div class="col-md-4">
-                      <label for="validationDefault01" class="form-label">nombre</label>
-                      <input type="text" class="form-control" id="validationDefault01" required>
+                      <label for="nombre" class="form-label">nombre</label>
+                      <input type="text" class="form-control" id="nombre" required>
                     </div>
                     <div class="col-md-4">
-                      <label for="validationDefault02" class="form-label">telefono</label>
-                      <input type="text" class="form-control" id="validationDefault02" required>
+                      <label for="telefono" class="form-label">telefono</label>
+                      <input type="text" class="form-control" id="telefono" required>
                     </div>
                     <div class="col-md-4">
-                      <label for="validationDefaultUsername" class="form-label">correo</label>
+                      <label for="correo" class="form-label">correo</label>
                       <div class="input-group">
                         <span class="input-group-text" id="inputGroupPrepend2">@</span>
-                        <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" required>
+                        <input type="text" class="form-control" id="correo" aria-describedby="inputGroupPrepend2" required>
                       </div>
                     </div>
                     <div class="col-md-6">
-                      <label for="validationDefault03" class="form-label">direccion</label>
-                      <input type="text" class="form-control" id="validationDefault03" required>
+                      <label for="direccion" class="form-label">direccion</label>
+                      <input type="text" class="form-control" id="direccion" required>
                     </div>
-                    <div class="col-md-4">
-                        <label for="validationDefault01" class="form-label">ciudad</label>
-                        <input type="text" class="form-control" id="validationDefault01"required>
-                      </div>
                     <div class="col-12">
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="invalidCheck2" required>
@@ -206,29 +202,14 @@
                           Acepto terminos y condiciones
                         </label>
                       </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="invalidCheck2">
-                        <label class="form-check-label" for="invalidCheck2">
-                          quiero recibir notificaciones acerca del pedido
-                        </label>
-                      </div>
                     </div>
                     <div class="col-12">
-                      <button class="btn btn-primary" type="submit">realizar pedido</button>
+                      <button onclick="placeOrder(event)" class="btn btn-primary">realizar pedido</button>
                     </div>
                   </form>
             </div>
 
             <div class="right-column">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                      <h5 class="card-title">Resumen de la compra</h5>
-                      <h6 class="card-subtitle mb-2 text-body-secondary">productos:</h6>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
-                    </div>
-                  </div>
             </div>
         </div>
     </main>
@@ -317,6 +298,6 @@
         <!-- End Footer Bottom -->
     </footer>
     <script src="../js/validar-sesion.js"></script>
-    <script src="../js/validar-pago.js"></script>
+    <script src="../js/pago.js"></script>
 </body>
 </html>
