pedidos completamente en funcionamiento

--- a/html/product-details.html
+++ b/html/product-details.html
@@ -239,10 +239,10 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-12 mt-4">
-                                        <a href="pago.html" class="cart-button">
-                                            <button class="btn btn-danger" style="width: 100%;">Comprar Ahora</button>
-                                        </a>
+                                <div class="col-lg-4 col-md-4 col-12 mt-4">  
+                                    <div class="cart-button">
+                                        <button onclick="buySingleProduct()" class="btn btn-danger" style="width: 100%;">Comprar Ahora</button> 
+                                    </div> 
                                     <div class="added-to-cart1"></div>
                                 </div>
                             </div>
