motor de busqueda implementado

--- a/html/buscador.html
+++ b/html/buscador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/tiny-slider.css" />
     <link rel="stylesheet" href="/css/glightbox.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/asistente.css" />
+    <link rel="stylesheet" href="../css/carrito.css">
 
 </head>
 <body>
@@ -169,100 +169,98 @@
     </div>
     <!-- End Header Bottom -->
 </header>
-    <main>
-        <div class="chat-container">
-            <div class="chat-box">
-                <p class="placeholder-text">Chatea con nuestro asistente virtual</p>
-            </div>
-            <div class="input-section">
-                <input type="text" class="chat-input" placeholder="Escribe tu mensaje aquí...">
-            </div>
-        </div>
-    </main>
 
-    <footer class="footer">
-      <!-- Start Footer Top -->
-      <!-- End Footer Top -->
-      <!-- Start Footer Middle -->
-      <div class="footer-middle">
-          <div class="container">
-              <div class="bottom-inner">
-                  <div class="row">
-                      <div class="col-lg-3 col-md-6 col-12">
-                          <!-- Single Widget -->
-                          <div class="single-footer f-contact">
-                              <h3>Contactanos</h3>
-                              <p class="phone">Telefono: +57 314 781 0003</p>
-                              <p class="mail">
-                                  <a href="jbaleta@unibarranquilla.edu.co">jbaleta@unibarranquilla.edu.co</a>
-                              </p>
-                          </div>
-                          <!-- End Single Widget -->
-                      </div>
-                      
-                      <div class="col-lg-3 col-md-6 col-12">
-                          <!-- Single Widget -->
-                          <div class="single-footer f-link">
-                              <h3>Informacion</h3>
-                              <ul>
-                                  <li><a href="about-us.html">Sobre Nosotros</a></li>
-                                  <li><a href="contact.html">Contactanos</a></li>
-                              </ul>
-                          </div>
-                          <!-- End Single Widget -->
-                      </div>
-                      <div class="col-lg-3 col-md-6 col-12">
-                          <!-- Single Widget -->
-                          <div class="single-footer f-link">
-                              <h3>Categorias Populares</h3>
-                              <ul>
-                                  <li><a href="product-grids.html">Portatiles</a></li>
-                                  <li><a href="product-grids.html">Celulares</a></li>
-                                  <li><a href="product-grids.html">Relojes</a></li>
-                                  <li><a href="product-grids.html">Auriculares</a></li>
-                                  <li><a href="product-grids.html">Monitores</a></li>
-                              </ul>
-                          </div>
-                          <!-- End Single Widget -->
-                      </div>
-                  </div>
-              </div>
-          </div>
+<div class="container">
+  <div class="cart-container">
+      <div class="cart-wrapper">
       </div>
-      <!-- End Footer Middle -->
-      <!-- Start Footer Bottom -->
-      <div class="footer-bottom">
-          <div class="container">
-              <div class="inner-content">
-                  <div class="row align-items-center">
-                      <div class="col-lg-4 col-12">
-                          <div class="payment-gateway">
-                              <span>Aceptamos:</span>
-                              <img src="/images/footer/credit-cards-footer.png" alt="#">
-                          </div>
+  </div>
+</div>
+
+<footer class="footer">
+  <!-- Start Footer Top -->
+  <!-- End Footer Top -->
+  <!-- Start Footer Middle -->
+  <div class="footer-middle">
+      <div class="container">
+          <div class="bottom-inner">
+              <div class="row">
+                  <div class="col-lg-3 col-md-6 col-12">
+                      <!-- Single Widget -->
+                      <div class="single-footer f-contact">
+                          <h3>Contactanos</h3>
+                          <p class="phone">Telefono: +57 314 781 0003</p>
+                          <p class="mail">
+                              <a href="jbaleta@unibarranquilla.edu.co">jbaleta@unibarranquilla.edu.co</a>
+                          </p>
                       </div>
-                      <div class="col-lg-4 col-12">
-                          <div class="copyright">
-                              <p>Diseñado y Desarrollado por TechShop</p>
-                          </div>
-                      </div>
-                      <div class="col-lg-4 col-12">
-                          <ul class="socila">
-                              <li>
-                                  <span>Siguenos en:</span>
-                              </li>
-                              <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
-                              <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
-                              <li><a href="javascript:void(0)"><i class="lni lni-instagram"></i></a></li>
-                              <li><a href="javascript:void(0)"><i class="lni lni-google"></i></a></li>
+                      <!-- End Single Widget -->
+                  </div>
+                  
+                  <div class="col-lg-3 col-md-6 col-12">
+                      <!-- Single Widget -->
+                      <div class="single-footer f-link">
+                          <h3>Informacion</h3>
+                          <ul>
+                              <li><a href="about-us.html">Sobre Nosotros</a></li>
+                              <li><a href="contact.html">Contactanos</a></li>
                           </ul>
                       </div>
+                      <!-- End Single Widget -->
+                  </div>
+                  <div class="col-lg-3 col-md-6 col-12">
+                      <!-- Single Widget -->
+                      <div class="single-footer f-link">
+                          <h3>Categorias Populares</h3>
+                          <ul>
+                              <li><a href="product-grids.html">Portatiles</a></li>
+                              <li><a href="product-grids.html">Celulares</a></li>
+                              <li><a href="product-grids.html">Relojes</a></li>
+                              <li><a href="product-grids.html">Auriculares</a></li>
+                              <li><a href="product-grids.html">Monitores</a></li>
+                          </ul>
+                      </div>
+                      <!-- End Single Widget -->
                   </div>
               </div>
           </div>
       </div>
-      <!-- End Footer Bottom -->
-  </footer>
-    <script src="../js/validar-sesion.js"></script>
+  </div>
+  <!-- End Footer Middle -->
+  <!-- Start Footer Bottom -->
+  <div class="footer-bottom">
+      <div class="container">
+          <div class="inner-content">
+              <div class="row align-items-center">
+                  <div class="col-lg-4 col-12">
+                      <div class="payment-gateway">
+                          <span>Aceptamos:</span>
+                          <img src="/images/footer/credit-cards-footer.png" alt="#">
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-12">
+                      <div class="copyright">
+                          <p>Diseñado y Desarrollado por TechShop</p>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-12">
+                      <ul class="socila">
+                          <li>
+                              <span>Siguenos en:</span>
+                          </li>
+                          <li><a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a></li>
+                          <li><a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a></li>
+                          <li><a href="javascript:void(0)"><i class="lni lni-instagram"></i></a></li>
+                          <li><a href="javascript:void(0)"><i class="lni lni-google"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- End Footer Bottom -->
+</footer>
+  <script src="/js/buscador.js"></script>
+  <script src="/js/validar-sesion.js"></script>
 </body>
 </html>
