--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                             <!-- navbar search start -->
                             <div class="navbar-search search-style-5">
                                 <div class="search-input">
-                                    <input type="text" placeholder="Search">
+                                    <input class="search" type="text" placeholder="Search">
                                 </div>
                                 <div class="search-btn">
-                                    <button><i class="lni lni-search-alt"></i></button>
+                                    <button onclick="guardarBusqueda()"><i class="lni lni-search-alt"></i></button>
                                 </div>
                             </div>
                             <!-- navbar search Ends -->
