funcionalidades del dashboard de añadir productos y otras cosas

--- a/html/asistente.html
+++ b/html/asistente.html
@@ -82,10 +82,10 @@
                         <!-- navbar search start -->
                         <div class="navbar-search search-style-5">
                             <div class="search-input">
-                                <input class="search" type="text" placeholder="Search">
+                                <input type="text" placeholder="Search">
                             </div>
                             <div class="search-btn">
-                                <button onclick="guardarBusqueda()"><i class="lni lni-search-alt"></i></button>
+                                <button><i class="lni lni-search-alt"></i></button>
                             </div>
                         </div>
                         <!-- navbar search Ends -->
