--- a/html/product-details.html
+++ b/html/product-details.html
@@ -93,10 +93,10 @@
                             <!-- navbar search start -->
                             <div class="navbar-search search-style-5">
                                 <div class="search-input">
-                                    <input class="search" type="text" placeholder="Search">
+                                    <input type="text" placeholder="Search">
                                 </div>
                                 <div class="search-btn">
-                                    <button onclick="guardarBusqueda()"><i class="lni lni-search-alt"></i></button>
+                                    <button><i class="lni lni-search-alt"></i></button>
                                 </div>
                             </div>
                             <!-- navbar search Ends -->
@@ -218,7 +218,7 @@
                     <div class="col-lg-6 col-md-12 col-12">
                         <div class="product-info">
                             <h2 id="product-name" class="title"></h2>
-                            <h2 id="stock" class="title text-success"></h2>
+                            <h2 id="stock" class="title"></h2>
                             <h3 id="price" class="price text-danger"></h3>
                             <p id="description" class="info-text"></p>
                             <div class="row">
